# Test-task-Junior-Backend

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.test  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml  ruff.toml
.github/workflows/: django.yml
core/: pagination.py  settings.py  urls.py
instagram/: admin.py  apps.py  models.py  serializers.py  views.py
instagram/migrations/: 0001_initial.py  0002_add_created_at_index.py
instagram/services/: instagram_client.py
tests/: conftest.py  test_comment_api.py  test_sync_api.py
